fix: changing width to more align with master branch

--- a/scss/os/_overrides_openlayers.scss
+++ b/scss/os/_overrides_openlayers.scss
@@ -161,7 +161,7 @@
     display: block;
     height: 7.9rem;
     margin: 0;
-    width: 15rem;
+    width: 15.2rem;
 
     &:focus,
     &:hover {
